# Prefect2-samples

./: README.md
docker-env/: Dockerfile  flow.py  prefect.yaml
tnj/: Dockerfile  pyproject.toml  requirements.txt
tnj/.github/workflows/: deploy.yml
